<resources>
    <string name="app_name">Contacts Manager</string>
    <string name="action_settings">Settings</string>
    <string name="show_additional_fields">Show additional fields</string>
    <string name="hide_additional_fields">Hide additional fields</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="job">Job Title</string>
    <string name="company">Company</string>
    <string name="web">Website</string>
    <string name="im">IM</string>
    <string name="phone_error">Phone number cannot be empty</string>
</resources>
